fix moon phase indication alignment

--- a/themes/apollo/sass/parts/garden-moon-phases.scss
+++ b/themes/apollo/sass/parts/garden-moon-phases.scss
@@ -10,7 +10,7 @@
 // Basic styling for the moon phase indicators shown next to note titles
 .moon-phase {
     font-size: 1.1rem;
-    vertical-align: top;
+    vertical-align: middle;
     font-family: var(--emoji-font);
 }
 
